# snowball

./: .boring  .ghci  LICENSE  Makefile  lib.mk  snowball.cabal
bench/: Main.hs  bench-snowball.hs
share/: porter.txt.xz
src/NLP/: Snowball.hs
src/NLP/Snowball/: Common.hs  IO.hs  Internal.hs  ST.hs
src/NLP/Snowball/IO/: Unsafe.hs
src/NLP/Snowball/IO/Unsafe/: C.hs
src/NLP/Snowball/ST/: Lazy.hs
src/Text/: Snowball.hs
test/: Main.hs  Makefile  TestData.hs  fixtures.hs  hspec.hs  parallel.hs  snowball-fixtures.hs  snowball-test.cabal  snowball-voc.cabal  snowball-voc.hs  stemmer-fixtures.hs  test-snowball.hs  vocabulary.hs
