name          : snowball
version       : 1.0.0.1
homepage      : http://hub.darcs.net/dag/snowball
bug-reports   : http://hub.darcs.net/dag/snowball/issues
category      : Natural Language Processing, Text
maintainer    : dag.odenhall@gmail.com
copyright     : (c) 2013 Dag Odenhall, (c) 2008 Tupil, (c) 2002 Richard Boulton
license       : BSD3
license-file  : LICENSE
cabal-version : >= 1.10
build-type    : Simple

synopsis      : Compute word stems in various languages
description   :
  <http://snowball.tartarus.org/ Snowball> is a language for describing
  <https://en.wikipedia.org/wiki/Stemming stemming algorithms>, and this
  package provides bindings to the C library that implements these algorithms,
  called libstemmer.
  .
  Here's a quick example:
  .
  >>> stem English "computing" == stem English "computers"
  True
  .
  The design is heavily influenced by the <stemmer> package, but with a number
  of improvements:
  .
  * It's about 5 times faster
  .
  * Handles Unicode correctly and independently of the system locale
  .
  * Avoids some potential memory leaks and is thread-safe
  .
  * Includes tests and benchmarks

extra-source-files : libstemmer_c/src_c/stem_UTF_8_danish.h
                     libstemmer_c/src_c/stem_UTF_8_dutch.h
                     libstemmer_c/src_c/stem_UTF_8_english.h
                     libstemmer_c/src_c/stem_UTF_8_finnish.h
                     libstemmer_c/src_c/stem_UTF_8_french.h
                     libstemmer_c/src_c/stem_UTF_8_german.h
                     libstemmer_c/src_c/stem_UTF_8_hungarian.h
                     libstemmer_c/src_c/stem_UTF_8_italian.h
                     libstemmer_c/src_c/stem_UTF_8_norwegian.h
                     libstemmer_c/src_c/stem_UTF_8_porter.h
                     libstemmer_c/src_c/stem_UTF_8_portuguese.h
                     libstemmer_c/src_c/stem_UTF_8_romanian.h
                     libstemmer_c/src_c/stem_UTF_8_russian.h
                     libstemmer_c/src_c/stem_UTF_8_spanish.h
                     libstemmer_c/src_c/stem_UTF_8_swedish.h
                     libstemmer_c/src_c/stem_UTF_8_turkish.h
                     libstemmer_c/include/libstemmer.h
                     libstemmer_c/libstemmer/modules_utf8.h
                     libstemmer_c/runtime/api.h
                     libstemmer_c/runtime/header.h
                     libstemmer_c/LICENSE

source-repository head
  type     : darcs
  location : http://hub.darcs.net/dag/snowball

library
  hs-source-dirs   : src
  default-language : Haskell2010
  ghc-options      : -Wall
  c-sources        : libstemmer_c/src_c/stem_UTF_8_danish.c
                     libstemmer_c/src_c/stem_UTF_8_dutch.c
                     libstemmer_c/src_c/stem_UTF_8_english.c
                     libstemmer_c/src_c/stem_UTF_8_finnish.c
                     libstemmer_c/src_c/stem_UTF_8_french.c
                     libstemmer_c/src_c/stem_UTF_8_german.c
                     libstemmer_c/src_c/stem_UTF_8_hungarian.c
                     libstemmer_c/src_c/stem_UTF_8_italian.c
                     libstemmer_c/src_c/stem_UTF_8_norwegian.c
                     libstemmer_c/src_c/stem_UTF_8_porter.c
                     libstemmer_c/src_c/stem_UTF_8_portuguese.c
                     libstemmer_c/src_c/stem_UTF_8_romanian.c
                     libstemmer_c/src_c/stem_UTF_8_russian.c
                     libstemmer_c/src_c/stem_UTF_8_spanish.c
                     libstemmer_c/src_c/stem_UTF_8_swedish.c
                     libstemmer_c/src_c/stem_UTF_8_turkish.c
                     libstemmer_c/runtime/api.c
                     libstemmer_c/runtime/utilities.c
                     libstemmer_c/libstemmer/libstemmer_utf8.c
  exposed-modules  : NLP.Snowball
  build-depends    : base == 4.*,
                     bytestring,
                     text
  if impl(ghc >= 7.2)
    default-extensions : Trustworthy

benchmark bench-snowball
  type             : exitcode-stdio-1.0
  main-is          : bench-snowball.hs
  hs-source-dirs   : bench
  default-language : Haskell2010
  ghc-options      : -Wall
  build-depends    : base == 4.*,
                     criterion,
                     language-haskell-extract,
                     snowball,
                     text

test-suite test-snowball
  type             : exitcode-stdio-1.0
  main-is          : test-snowball.hs
  hs-source-dirs   : test
  default-language : Haskell2010
  ghc-options      : -Wall -fno-warn-orphans
                     -threaded -rtsopts -with-rtsopts=-N
  build-depends    : base == 4.*,
                     HUnit,
                     QuickCheck,
                     quickcheck-instances,
                     snowball,
                     tasty,
                     tasty-hunit,
                     tasty-quickcheck,
                     text
