name: snowball
version: 2.0.0.0

category: Natural Language Processing, Text
synopsis: Compute word stems in various languages

description:
    <http://snowball.tartarus.org/ Snowball> is a language for describing
    <https://en.wikipedia.org/wiki/Stemming stemming algorithms>, and this
    package provides bindings to the C library that implements these
    algorithms, called libstemmer.
    .
    Here's a quick example:
    .
    >>> stem English "computing" == stem English "computers"
    True
    .
    Originally based on the
    <http://hackage.haskell.org/package/stemmer stemmer> package, this package
    provides a number of improvements:
    .
    [Safety] type-safe, thread-safe, memory-safe
    .
    [Performance] carefully tuned and using efficient data types
    .
    [Correctness] extensively tested and handles Unicode properly
    .
    [Power] optional low-level interfaces
    .
    For a comparison, stemming and verifying the 580 498 words included with
    the upstream Snowball distribution on my machine takes this package about
    half a second with no errors, regardless of what the system locale is.
    The same test using the @stemmer@ package gives different results depending
    on the system locale encoding, and takes 2-14 seconds with 22-34% errors,
    if it runs at all: with non-lenient encodings it fails all together and
    with encodings that use units larger than a byte it segfaults, regardless
    of leniency.

copyright:
    (c) 2012-2013 Dag Odenhall,
    (c) 2008 Tupil,
    (c) 2002 Richard Boulton,
    (c) 2001 Dr Martin Porter

license-file: LICENSE
license: BSD3
maintainer: dag.odenhall@gmail.com

build-type: Simple
cabal-version: >= 1.10
extra-source-files: lib/libstemmer_c/include/libstemmer.h
extra-source-files: lib/libstemmer_c/libstemmer/modules.h
extra-source-files: lib/libstemmer_c/runtime/*.h
extra-source-files: lib/libstemmer_c/src_c/*.h

bug-reports: http://hub.darcs.net/dag/snowball/issues
homepage: http://hub.darcs.net/dag/snowball

SOURCE-REPOSITORY head
    location: http://hub.darcs.net/dag/snowball
    type: darcs

TEST-SUITE hspec
    type: exitcode-stdio-1.0
    main-is: test/hspec.hs
    default-language: Haskell2010
    ghc-options: -Wall

    build-depends: base == 4.*
    build-depends: bytestring
    build-depends: hspec
    build-depends: snowball

TEST-SUITE doctest
    type: exitcode-stdio-1.0
    main-is: test/doctest.hs
    default-language: Haskell2010

    build-depends: base
    build-depends: directory
    build-depends: doctest >=0.7
    build-depends: Glob >=0.7

LIBRARY
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -Wall

    includes: lib/libstemmer_c/include/libstemmer.h
    includes: lib/libstemmer_c/libstemmer/modules.h
    -- includes: lib/libstemmer_c/runtime/api.h
    includes: lib/libstemmer_c/runtime/header.h
    includes: lib/libstemmer_c/src_c/stem_ISO_8859_1_danish.h
    includes: lib/libstemmer_c/src_c/stem_ISO_8859_1_dutch.h
    includes: lib/libstemmer_c/src_c/stem_ISO_8859_1_english.h
    includes: lib/libstemmer_c/src_c/stem_ISO_8859_1_finnish.h
    includes: lib/libstemmer_c/src_c/stem_ISO_8859_1_french.h
    includes: lib/libstemmer_c/src_c/stem_ISO_8859_1_german.h
    includes: lib/libstemmer_c/src_c/stem_ISO_8859_1_hungarian.h
    includes: lib/libstemmer_c/src_c/stem_ISO_8859_1_italian.h
    includes: lib/libstemmer_c/src_c/stem_ISO_8859_1_norwegian.h
    includes: lib/libstemmer_c/src_c/stem_ISO_8859_1_porter.h
    includes: lib/libstemmer_c/src_c/stem_ISO_8859_1_portuguese.h
    includes: lib/libstemmer_c/src_c/stem_ISO_8859_1_spanish.h
    includes: lib/libstemmer_c/src_c/stem_ISO_8859_1_swedish.h
    includes: lib/libstemmer_c/src_c/stem_ISO_8859_2_romanian.h
    includes: lib/libstemmer_c/src_c/stem_KOI8_R_russian.h
    includes: lib/libstemmer_c/src_c/stem_UTF_8_danish.h
    includes: lib/libstemmer_c/src_c/stem_UTF_8_dutch.h
    includes: lib/libstemmer_c/src_c/stem_UTF_8_english.h
    includes: lib/libstemmer_c/src_c/stem_UTF_8_finnish.h
    includes: lib/libstemmer_c/src_c/stem_UTF_8_french.h
    includes: lib/libstemmer_c/src_c/stem_UTF_8_german.h
    includes: lib/libstemmer_c/src_c/stem_UTF_8_hungarian.h
    includes: lib/libstemmer_c/src_c/stem_UTF_8_italian.h
    includes: lib/libstemmer_c/src_c/stem_UTF_8_norwegian.h
    includes: lib/libstemmer_c/src_c/stem_UTF_8_porter.h
    includes: lib/libstemmer_c/src_c/stem_UTF_8_portuguese.h
    includes: lib/libstemmer_c/src_c/stem_UTF_8_romanian.h
    includes: lib/libstemmer_c/src_c/stem_UTF_8_russian.h
    includes: lib/libstemmer_c/src_c/stem_UTF_8_spanish.h
    includes: lib/libstemmer_c/src_c/stem_UTF_8_swedish.h
    includes: lib/libstemmer_c/src_c/stem_UTF_8_turkish.h

    c-sources: lib/libstemmer_c/libstemmer/libstemmer.c
    c-sources: lib/libstemmer_c/runtime/api.c
    c-sources: lib/libstemmer_c/runtime/utilities.c
    c-sources: lib/libstemmer_c/src_c/stem_ISO_8859_1_danish.c
    c-sources: lib/libstemmer_c/src_c/stem_ISO_8859_1_dutch.c
    c-sources: lib/libstemmer_c/src_c/stem_ISO_8859_1_english.c
    c-sources: lib/libstemmer_c/src_c/stem_ISO_8859_1_finnish.c
    c-sources: lib/libstemmer_c/src_c/stem_ISO_8859_1_french.c
    c-sources: lib/libstemmer_c/src_c/stem_ISO_8859_1_german.c
    c-sources: lib/libstemmer_c/src_c/stem_ISO_8859_1_hungarian.c
    c-sources: lib/libstemmer_c/src_c/stem_ISO_8859_1_italian.c
    c-sources: lib/libstemmer_c/src_c/stem_ISO_8859_1_norwegian.c
    c-sources: lib/libstemmer_c/src_c/stem_ISO_8859_1_porter.c
    c-sources: lib/libstemmer_c/src_c/stem_ISO_8859_1_portuguese.c
    c-sources: lib/libstemmer_c/src_c/stem_ISO_8859_1_spanish.c
    c-sources: lib/libstemmer_c/src_c/stem_ISO_8859_1_swedish.c
    c-sources: lib/libstemmer_c/src_c/stem_ISO_8859_2_romanian.c
    c-sources: lib/libstemmer_c/src_c/stem_KOI8_R_russian.c
    c-sources: lib/libstemmer_c/src_c/stem_UTF_8_danish.c
    c-sources: lib/libstemmer_c/src_c/stem_UTF_8_dutch.c
    c-sources: lib/libstemmer_c/src_c/stem_UTF_8_english.c
    c-sources: lib/libstemmer_c/src_c/stem_UTF_8_finnish.c
    c-sources: lib/libstemmer_c/src_c/stem_UTF_8_french.c
    c-sources: lib/libstemmer_c/src_c/stem_UTF_8_german.c
    c-sources: lib/libstemmer_c/src_c/stem_UTF_8_hungarian.c
    c-sources: lib/libstemmer_c/src_c/stem_UTF_8_italian.c
    c-sources: lib/libstemmer_c/src_c/stem_UTF_8_norwegian.c
    c-sources: lib/libstemmer_c/src_c/stem_UTF_8_porter.c
    c-sources: lib/libstemmer_c/src_c/stem_UTF_8_portuguese.c
    c-sources: lib/libstemmer_c/src_c/stem_UTF_8_romanian.c
    c-sources: lib/libstemmer_c/src_c/stem_UTF_8_russian.c
    c-sources: lib/libstemmer_c/src_c/stem_UTF_8_spanish.c
    c-sources: lib/libstemmer_c/src_c/stem_UTF_8_swedish.c
    c-sources: lib/libstemmer_c/src_c/stem_UTF_8_turkish.c

    exposed-modules: NLP.Snowball
    exposed-modules: NLP.Snowball.Common
    exposed-modules: NLP.Snowball.Internal
    exposed-modules: NLP.Snowball.IO
    exposed-modules: NLP.Snowball.IO.Unsafe
    exposed-modules: NLP.Snowball.IO.Unsafe.C
    exposed-modules: NLP.Snowball.ST
    exposed-modules: NLP.Snowball.ST.Lazy

    build-depends: base == 4.*
    build-depends: bytestring
    build-depends: case-insensitive
    build-depends: deepseq
    build-depends: hashable
    build-depends: QuickCheck
    build-depends: text

    if impl(ghc >= 7.1)
        cpp-options: -DSAFE_HASKELL

BENCHMARK bench-snowball
    type: exitcode-stdio-1.0
    main-is: bench-snowball.hs
    hs-source-dirs: bench
    default-language: Haskell2010
    ghc-options: -Wall

    build-depends: base == 4.*
    build-depends: criterion
    build-depends: language-haskell-extract
    build-depends: snowball
    build-depends: text

TEST-SUITE test-snowball
    type: exitcode-stdio-1.0
    main-is: test-snowball.hs
    hs-source-dirs: test
    default-language: Haskell2010
    ghc-options: -Wall

    ghc-options: -fno-warn-orphans
    ghc-options: -rtsopts
    ghc-options: -threaded
    ghc-options: -with-rtsopts=-N

    build-depends: base == 4.*
    build-depends: HUnit
    build-depends: QuickCheck
    build-depends: quickcheck-instances
    build-depends: snowball
    build-depends: tasty
    build-depends: tasty-hunit
    build-depends: tasty-quickcheck
    build-depends: text
