name: snowball-test
version: 2.0.0.0

build-type: Simple
cabal-version: >=1.2

FLAG stemmer
    default: False
    manual: True

EXECUTABLE vocabulary
    main-is: vocabulary.hs
    other-modules: TestData

    ghc-options: -rtsopts
    ghc-options: -threaded
    ghc-options: -Wall
    ghc-options: -with-rtsopts=-N

    build-depends: ansi-wl-pprint
    build-depends: async
    build-depends: base
    build-depends: bytestring
    build-depends: filepath
    build-depends: microtimer
    build-depends: text

    if flag(stemmer)
        build-depends: stemmer
        cpp-options: -DSTEMMER
    else
        build-depends: snowball

EXECUTABLE parallel
    main-is: parallel.hs
    other-modules: TestData

    ghc-options: -rtsopts
    ghc-options: -threaded
    ghc-options: -Wall
    ghc-options: -with-rtsopts=-N

    build-depends: async
    build-depends: base
    build-depends: bytestring
    build-depends: deepseq
    build-depends: filepath
    build-depends: parallel
    build-depends: snowball
    build-depends: text
